--- a/slides/index.html
+++ b/slides/index.html
@@ -19,6 +19,7 @@ URL: https://code.google.com/p/io-2012-slides
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" media="all" href="theme/css/default.css">
     <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="theme/css/phone.css">
+    <link rel="stylesheet" media="all" href="custom.css">
     <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->
     <script data-main="js/slides" src="js/require-1.0.8.min.js"></script>
 </head>
@@ -36,6 +37,20 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
 </slide>
 
+
+<slide>
+    <hgroup>
+        <h2>Outline</h2>
+    </hgroup>
+    <article class="large">
+        <ul>
+            <li>Part 1 - Creating actors and sending messages</li>
+            <li>Part 2 - Actor supervision and death watch</li>
+            <li>Part 3 - Scalability</li>
+        </ul>
+    </article>
+</slide>
+
 <slide>
     <hgroup>
         <h2>Motivation</h2>
@@ -48,17 +63,6 @@ URL: https://code.google.com/p/io-2012-slides
             <li>Applications need to scale</li>
         </ul>
     </article>
-    <aside class="note">
-        <section>
-            <ul>
-                <li>Point I wanted to make #1</li>
-                <li>Point I wanted to make #2</li>
-                <li>Point I wanted to make #3</li>
-                <li>Example <a href="#">link</a> in notes.</li>
-            </ul>
-            <p><b>Remember to say this tag line!</b></p>
-        </section>
-    </aside>
 </slide>
 
 <slide>
@@ -159,11 +163,21 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
 </slide>
 
+
 <slide class="thank-you-slide segue nobackground">
-    <article class="flexbox vleft auto-fadein">
-        <h2>&lt;Thank You!&gt;</h2>
+    <article class="flexbox vleft">
+        <h2>Thanks!</h2>
+        <br><br>
+        <h2>Questions?</h2>
+        <br>
+        <p>Code: <a href="https://github.com/arild/akka-workshop">https://github.com/arild/akka-workshop</a></p>
+        <p>Slides: <a href="http://arild.github.com/akka-workshop">http://arild.github.com/akka-workshop</a></p>
     </article>
+    <p class="auto-fadein" data-config-contact>
+        <!-- populated from slide_config.json -->
+    </p>
 </slide>
+
 
 <slide class="backdrop"></slide>
 
