Slides with instructions for part I

--- a/slides/index.html
+++ b/slides/index.html
@@ -135,15 +135,32 @@ URL: https://code.google.com/p/io-2012-slides
         <article>
 <pre class="prettyprint" data-lang="scala">import akka.actor.{Props, ActorSystem, Actor}
 
+case class MyCommand()
+
 class GreetingActor extends Actor {
   def receive = {
-    case message : String ⇒ println("Hello " + message)
+    case message : String => println("Hello " + message)
+    case command : MyCommand => println("Got a command!")
   }
 
   val system = ActorSystem("MySystem")
   val greeter = system.actorOf(Props[GreetingActor], name = "greeter")
   greeter ! "Charlie Parker"
+  greeter ! MyCommand
 }</pre>
+        </article>
+    </slide>
+
+    <slide>
+        <hgroup>
+            <h2>Part 1</h2>
+            <h3>Creating actors and sending messages</h3>
+        </hgroup>
+        <article class="large">
+            <ul>
+               <li>Open ComputeActorTest in IDE, run the tests</li>
+               <li>Edit ComputeActor.scala until those tests are green</li>
+            </ul>
         </article>
     </slide>
 
