--- a/slides/index.html
+++ b/slides/index.html
@@ -122,7 +122,7 @@ URL: https://code.google.com/p/io-2012-slides
         </aside>
         <hgroup><h2>Actor</h2></hgroup>
         <article>
-            <img src="images/actor_illustration1.png" style="max-height: 500px; max-width: 500px;" />
+            <img src="images/ACTORS.png" style="max-height: 500px; max-width: 500px;" />
             <br />
             <br />
             <ul>
