Add outline slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -113,18 +113,20 @@ URL: https://code.google.com/p/io-2012-slides
         </article>
     </slide>
 
+
     <slide>
         <hgroup>
             <h2>Outline</h2>
         </hgroup>
         <article class="large">
             <ul>
-                <li style=><b>Part 1 - Creating actors and sending messages</b></li>
+                <li class="outlineHighlight">Part 1 - Creating actors and sending messages</li>
                 <li>Part 2 - Actor supervision and death watch</li>
                 <li>Part 3 - Scalability</li>
             </ul>
         </article>
     </slide>
+
 
     <slide>
         <aside class="note">
@@ -175,6 +177,7 @@ object GreetingActor extends App {
         <span class="example">GreetingActor_1.scala</span>
     </slide>
 
+
     <slide>
         <hgroup>
             <h2>Message command</h2>
@@ -200,6 +203,7 @@ object GreetingActor extends App {
 
 
     </slide>
+
 
     <slide>
         <hgroup>
@@ -247,6 +251,7 @@ object GreetingActor extends App {
         </article>
     </slide>
 
+
     <slide>
         <hgroup>
             <h2>Part 1</h2>
@@ -260,6 +265,7 @@ object GreetingActor extends App {
         </article>
     </slide>
 
+
     <slide>
         <hgroup>
             <h2>Part 1 - Walkthrough</h2>
@@ -268,6 +274,20 @@ object GreetingActor extends App {
 
     <slide>
         <h2 class="flexbox vleft auto-fadein">Fault Tolerance with Supervision and Death Watch</h2>
+    </slide>
+
+
+    <slide>
+        <hgroup>
+            <h2>Outline</h2>
+        </hgroup>
+        <article class="large">
+            <ul>
+                <li>Part 1 - Creating actors and sending messages</li>
+                <li class="outlineHighlight">Part 2 - Actor supervision and death watch</li>
+                <li>Part 3 - Scalability</li>
+            </ul>
+        </article>
     </slide>
 
 
@@ -321,6 +341,7 @@ object GreetingActor extends App {
         </article>
     </slide>
 
+
     <slide>
             <hgroup>
                 <h2>Supervising Actors</h2>
@@ -348,6 +369,7 @@ class GreetingActor extends Actor {
                 </article>
             </slide>
 
+
         <slide class="restartslide">
                 <hgroup>
                     <h2>What happens on an actor restart</h2>
@@ -365,6 +387,7 @@ class GreetingActor extends Actor {
         </article>
         </slide>
 
+
     <slide>
         <hgroup>
             <h2>Using Death Watch</h2>
@@ -373,6 +396,18 @@ class GreetingActor extends Actor {
         </article>
     </slide>
 
+    <slide>
+        <hgroup>
+            <h2>Outline</h2>
+        </hgroup>
+        <article class="large">
+            <ul>
+                <li>Part 1 - Creating actors and sending messages</li>
+                <li>Part 2 - Actor supervision and death watch</li>
+                <li class="outlineHighlight">Part 3 - Scalability</li>
+            </ul>
+        </article>
+    </slide>
 
     <slide class="thank-you-slide segue nobackground">
         <article class="flexbox vleft">
